# PPE-CloudSmart-GiftBox

./: .env.example  .gitignore  CLAUDE.md  README.md  claude-deepseek.ps1  deploy.py  find_space_id.py  pyproject.toml  refresh_token.py  requirements.in  requirements.txt  setup.bat  setup.sh  start.bat  start.sh  test_create_space.py  test_deep_permissions.py  test_docs.py  test_permissions.py  test_tables.py  test_token.py  test_wiki_node.py  test_wiki_perm.py
.github/: PULL_REQUEST_TEMPLATE.md
auto/: auto_2026-04-04.md  auto_2026-04-05.md
config/: __init__.py  course_schema.py  settings.py
docs/: 00-快速开始.md  ARCHITECTURE_FOR_HUMANS.md  COURSE_DATA_MANAGEMENT_DESIGN.md  FEISHU_API_KNOWLEDGE.md  GLUE_CODING_GUIDE.md  PROGRESS_SUMMARY.md  REFACTOR_PLAN.md  init-bitable-guide.md  多维表格字段设计.md  整改方案-20260525.md  用户配置与使用指南.md  自进化循环指南.md
glue/: __init__.py  deploy.py  pipeline.py  rollback.py
libs/: __init__.py  data_adapter.py  exceptions.py  llm_adapter.py  ocr_adapter.py  operation_log.py
log/: 2026-03-30-22.md  2026-03-31-00.md  2026-03-31-23.md  2026-04-04-10.md  2026-04-04-12.md  2026-04-20-22.md  2026-04-20-23-deep-refactor.md  2026-04-20-23-part2.md  2026-04-20-23.md  2026-06-19-10.md
memorandum/: demo-stage-issues.md
ppe_demo/: bitable_config.json  config.py  models.py  wiki_structure.json
ppe_giftbox/: config.py
scripts/: seed_course_db.py
services/: __init__.py  archive_service.py  catalog_service.py  course_data_service.py  doc_service.py  import_service.py  material_service.py  ocr_service.py  perm_service.py  sync_service.py  wiki_service.py  (+1 more)
(+56 files in other folders)
